bad/assign_field_class_new_class_void.example_compiler_output
ERROR
[1mbad/assign_field_class_new_class_void.lat:10:14: [1;31merror: [0;1massigning to `Y` from incompatible type `void`[m
	(new C).fld = vfunc();
	            [1;32m^[m
